--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,13 @@
   border-color: #5734dc !important;
   width: 180px !important;
 }
+.custom-select__control.currency {
+  background-color: #5734dc !important;
+  color: white !important;
+  font-weight: 500 !important;
+  border-color: #5734dc !important;
+  width: 180px !important;
+}
 
 .custom-select__single-value {
   color: white !important;
@@ -23,6 +30,7 @@
   color: black !important;
   font-weight: 500 !important;
 }
+
 
 .custom-select__option--is-focused {
   background-color: lightblue !important;
@@ -51,7 +59,3 @@
 }
 
 /* ------------react select style end------------- */
-
-.custom-padding {
-  padding: 30px !important;
-}
