--- a/src/index.css
+++ b/src/index.css
@@ -31,7 +31,6 @@
   font-weight: 500 !important;
 }
 
-
 .custom-select__option--is-focused {
   background-color: lightblue !important;
 }
@@ -59,3 +58,33 @@
 }
 
 /* ------------react select style end------------- */
+
+/* Pagination Style */
+
+.swiper-pagination,
+.swiper-button-next,
+.swiper-button-prev {
+  top: unset !important;
+  bottom: unset !important;
+  left: unset !important;
+  right: unset !important;
+  width: auto !important;
+  position: unset !important;
+  margin: 0px !important;
+  color: #fff !important;
+  z-index: 1 !important;
+}
+
+.swiper-button-next::after {
+  content: "" !important;
+}
+.swiper-button-prev::after {
+  content: "" !important;
+}
+.swiper-button-prev.balance,
+.swiper-button-next.balance {
+  width: 30px !important;
+  height: 30px !important;
+  border-radius: 5px !important;
+  padding: 4px !important;
+}
